--- a/src/assets/css/iconfont.css
+++ b/src/assets/css/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4146259 */
-  src: url('//at.alicdn.com/t/c/font_4146259_nzmd5jzpeg.woff2?t=1688289169746') format('woff2'),
-       url('//at.alicdn.com/t/c/font_4146259_nzmd5jzpeg.woff?t=1688289169746') format('woff'),
-       url('//at.alicdn.com/t/c/font_4146259_nzmd5jzpeg.ttf?t=1688289169746') format('truetype');
+  src: url('//at.alicdn.com/t/c/font_4146259_x829u040q2n.woff2?t=1688305854103') format('woff2'),
+       url('//at.alicdn.com/t/c/font_4146259_x829u040q2n.woff?t=1688305854103') format('woff'),
+       url('//at.alicdn.com/t/c/font_4146259_x829u040q2n.ttf?t=1688305854103') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,14 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-weiwancheng:before {
+  content: "\e663";
+}
+
+.icon-wancheng:before {
+  content: "\e60b";
 }
 
 .icon-wuxianwangluo:before {
