--- a/src/assets/css/iconfont.css
+++ b/src/assets/css/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4146259 */
-  src: url('//at.alicdn.com/t/c/font_4146259_1tfcsa4o5rk.woff2?t=1688433737978') format('woff2'),
-       url('//at.alicdn.com/t/c/font_4146259_1tfcsa4o5rk.woff?t=1688433737978') format('woff'),
-       url('//at.alicdn.com/t/c/font_4146259_1tfcsa4o5rk.ttf?t=1688433737978') format('truetype');
+  src: url('//at.alicdn.com/t/c/font_4146259_btt303a7l4j.woff2?t=1688483869133') format('woff2'),
+       url('//at.alicdn.com/t/c/font_4146259_btt303a7l4j.woff?t=1688483869133') format('woff'),
+       url('//at.alicdn.com/t/c/font_4146259_btt303a7l4j.ttf?t=1688483869133') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,22 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-riqi:before {
+  content: "\e65b";
+}
+
+.icon-daohangdizhi:before {
+  content: "\e65e";
+}
+
+.icon-huiyuan:before {
+  content: "\e652";
+}
+
+.icon-fuwudianping:before {
+  content: "\e63a";
 }
 
 .icon-dingdan:before {
